Fri Oct 24 17:49:16 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_utils.ads: Add a procedure Free (to deallocate a
 	string_access variable). Add Configuration parameter in procedure
 	Produce_Partition_Executable (compilation, binding and linking are
 	executed in current directory and no longer in
 	dsa/<conf>/<part>). Add Object parameter in Compile_RCI_Receiver
 	and Compile_RCI_Caller for same reason.

	* xe_utils.adb: Add -x ada systematically. Add -o <object>
 	systematically to save object file in place. Compile, bind and
 	link in current directory to honor gnat.adc.

	* xe_stubs.adb: Use previous changes and honor gnat.adc. Fix
 	4617-G02.

Thu Oct 23 09:58:06 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_stubs.adb: Bad command order. Fix a problem with 0003-G00.

	* xe_back.adb, xe_back.ads: Add new procedure Get_Parent
	which extracts the root parent from a unit name.

	* xe_check.adb: Check that a RCI package and its children are on
 	the same partition. Fix 0002-G09.

Fri Oct 17 18:37:08 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_stubs.adb: Change s-garela.adb generation. Move s-garela
	generation code into a procedure Initialize.

Thu Oct 16 16:38:04 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Update caused by System.Garlic.Options changes.

Wed Sep 17 18:15:37 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_lead.adb: Pipe standard error and output to /dev/null for
	a pragma Starter (Shell) because some systems output the pid of
	the background process.

	* xe_stubs.adb: Fix Mark_Unit_On_Partition when unit is generic.
	
Sat Sep 13 14:32:15 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* config.sdefault: Use output of gnatls to find the right include
	and object directories. Also output the path to libgnat.a when
	used with the 'pathtolib' argument. Make it work with a
	non-standard or cross installation.

Fri Sep 12 18:52:20 1997  Laurent Pautet  <pautet@scapin.enst.fr>
